# restui

./: .gitignore  1.http  CHANGELOG.md  Cargo.toml  KEYBINDINGS.md  LICENSE  README.md  a.http  dd.http
nvim/plugin/: restui.vim
src/: action.rs  app.rs  clipboard.rs  command.rs  config.rs  event.rs  highlight.rs  http_client.rs  keybinding_config.rs  keybindings.rs  main.rs  state.rs  theme.rs  tui.rs  vim_buffer.rs  vim_instance.rs
src/app/: autocomplete.rs  body_edit.rs  clipboard_ops.rs  collections.rs  execute.rs  inline_edit.rs  mod.rs  mode.rs  overlay.rs  request_field.rs  scroll.rs  search.rs  vim_sync.rs
src/core/: action.rs  command.rs  http_client.rs  mod.rs  state.rs  tui.rs
src/keybindings/: config.rs  mod.rs
src/model/: chain.rs  collection.rs  environment.rs  history.rs  mod.rs  request.rs  response.rs  response_type.rs
src/parser/: env.rs  http.rs  mod.rs  yaml.rs
src/ui/: body.rs  collections.rs  command_palette.rs  floating.rs  help.rs  layout.rs  mod.rs  request.rs  response.rs  statusbar.rs  theme.rs
src/vim/: buffer.rs  input.rs  mod.rs  motions.rs  operators.rs  render.rs  search.rs  visual.rs
testdata/: env.json  example.http
themes/: catppuccin.toml  default.toml  dracula.toml  gruvbox.toml  light.toml  nord.toml  solarized.toml  tokyonight.toml
