[package]
name = "restui"
version = "0.2.5"
edition = "2024"
description = "A lazygit-style TUI HTTP client with vim keybindings"
license = "MIT"
repository = "https://github.com/Di3go0-0/restui"
homepage = "https://github.com/Di3go0-0/restui"
keywords = ["http", "rest", "tui", "vim", "api"]
categories = ["command-line-utilities", "web-programming::http-client"]
readme = "README.md"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
syntect = "5"
indexmap = { version = "2", features = ["serde"] }
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
clap = { version = "4", features = ["derive"] }
arboard = "3"
unicode-width = "0.2.2"
fuzzy-matcher = "0.3.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
